--- a/style.css
+++ b/style.css
@@ -110,6 +110,20 @@ body {
   font-size: var(--fs-6);
 }
 
+.section-subtitle {
+  color: var(--citrine);
+  font-size: var(--fs-11);
+  font-weight: var(--fw-500);
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  margin-bottom: 10px;
+  text-align: center;
+}
+
+.section-title {
+  text-align: center;
+}
+
 .btn {
   color: var(--white);
   font-size: var(--fs-11);
@@ -202,6 +216,124 @@ body {
   color: var(--citrine);
 }
 
+.movies-list {
+  display: grid;
+  gap: 50px;
+}
+
+.movie-card {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.movie-card .card-banner {
+  position: relative;
+  background: var(--gunmetal-1);
+  aspect-ratio: 2 / 3;
+  border-radius: 6px;
+  overflow: hidden;
+  margin-bottom: 20px;
+  transition: var(--transition-1);
+}
+
+.movie-card .card-banner::after {
+  content: "";
+  position: absolute;
+  inset: 0;
+  transition: var(--transition-1);
+}
+
+.movie-card .card-banner:hover {
+  box-shadow: 0 1px 2px hsla(0, 0%, 0%, 0.5);
+}
+
+.movie-card .card-banner:hover::after {
+  background: hsla(0, 0%, 100%, 0.05);
+}
+
+.movie-card .card-banner img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.movie-card .title-wrapper {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 20px;
+  margin-bottom: 10px;
+}
+
+.movie-card .card-title {
+  color: var(--white);
+  font-size: var(--fs-7);
+  transition: var(--transition-1);
+}
+
+.movie-card .title-wrapper time {
+  color: var(--citrine);
+  font-size: var(--fs-9);
+  font-weight: var(--fw-500);
+}
+
+.movie-card .card-meta {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  gap: 15px;
+}
+
+.movie-card .badge {
+  color: var(--citrine);
+}
+
+.movie-card .duration {
+  margin-left: auto;
+}
+
+.movie-card :is(.duration, .rating) {
+  display: flex;
+  align-items: center;
+  gap: 5px;
+  color: var(--gainsboro);
+  font-size: var(--fs-11);
+  font-weight: var(--fw-500);
+}
+
+.movie-card :is(.duration, .rating) ion-icon {
+  font-size: 13px;
+  --ionicon-stroke-width: 50px;
+  color: var(--citrine);
+}
+
+.movies-list.has-scrollbar {
+  display: flex;
+  justify-content: flex-start;
+  gap: 30px;
+  overflow-x: auto;
+  scroll-snap-type: inline mandatory;
+  padding-bottom: 25px;
+}
+
+.has-scrollbar::-webkit-scrollbar {
+  height: 8px;
+}
+
+.has-scrollbar::-webkit-scrollbar-track {
+  background: transparent;
+  box-shadow: 0 0 0 2px var(--citrine);
+  border-radius: 10px;
+}
+
+.has-scrollbar::-webkit-scrollbar-thumb {
+  background: var(--gainsboro);
+  border-radius: 10px;
+  box-shadow: inset 0 1px 0 var(--black), inset 0 -1px 0 var(--black);
+}
+
 /* ......header......  */
 .header {
   border: 2px solid orange;
@@ -209,6 +341,9 @@ body {
   top: 0;
   left: 0;
   width: 100%;
+  padding-block: 25px;
+  transition: var(--transition-2);
+  z-index: 4;
 }
 
 .header.active {
@@ -351,6 +486,49 @@ body {
   color: var(--citrine);
 }
 
+/* Upcoming....  */
+.upcoming {
+  background: url("images/upcoming-bg.png") no-repeat;
+  background-size: cover;
+  background-position: center;
+  padding-block: var(--section-padding);
+}
+
+.upcoming .flex-wrapper {
+  margin-bottom: 50px;
+}
+
+.upcoming .section-title {
+  margin-bottom: 30px;
+}
+
+.filter-list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+}
+
+.upcoming .filter-btn {
+  color: var(--white);
+  background: var(--raisin-black);
+  font-size: var(--fs-11);
+  font-weight: var(--fw--500);
+  border: 2px solid var(--gunmetal-1);
+  padding: 12px 26px;
+  border-radius: 50px;
+}
+
+.upcoming .filter-btn:focus {
+  border-color: var(--citrine);
+}
+
+.upcoming .movies-list > li {
+  min-width: 100%;
+  scroll-snap-align: start;
+}
+
 /* resposive.....  */
 @media (min-width: 550px) {
   :root {
@@ -362,12 +540,21 @@ body {
     margin-inline: auto;
   }
 
+  .movies-list {
+    grid-template-columns: 1fr 1fr;
+    gap: 60px 30px;
+  }
+
   .hero {
     min-height: unset;
   }
 
   .hero-content {
     margin-top: 20px;
+  }
+
+  .upcoming .movies-list > li {
+    min-width: calc(50% - 15px);
   }
 }
 
@@ -445,6 +632,10 @@ body {
     max-width: 960px;
   }
 
+  .movies-list {
+    grid-template-columns: repeat(3, 1fr);
+  }
+
   .header.active {
     padding-block: 5px;
   }
@@ -496,6 +687,24 @@ body {
     margin-top: 100px;
     max-width: 600px;
   }
+
+  .upcoming .flex-wrapper {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  .upcoming :is(.section-subtitle, .section-title) {
+    text-align: left;
+  }
+
+  .upcoming .section-title {
+    margin-bottom: 0;
+  }
+
+  .upcoming .movies-list > li {
+    min-width: calc(33.33% - 20px);
+  }
 }
 
 @media (min-width: 1200px) {
@@ -506,6 +715,10 @@ body {
 
   .container {
     max-width: 1320px;
+  }
+
+  .movies-list {
+    grid-template-columns: repeat(4, 1fr);
   }
 
   .navbar {
@@ -521,5 +734,9 @@ body {
 
   .hero .container {
     width: 1320px;
+  }
+
+  .upcoming .movies-list > li {
+    min-width: calc(25% - 22.5px);
   }
 }
